<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/windowBk_color">
    
<LinearLayout
    android:id="@+id/rfidwritebk"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout 
        android:id="@+id/rfidline1"
    	android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
        >
        <TextView
        android:id="@+id/Text_Passwd_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/RFID_UserpwdSetting"    
        />
        <EditText 
        android:id="@+id/Edit_Passwd_LEN"
        android:layout_width="220dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="10"
    	android:inputType="text"
        />
        
        <TextView
        android:id="@+id/Text_GCDH_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/RFID_GCDM"    
        />
        <TextView
        android:id="@+id/Edit_GCDH_LEN"
        android:layout_width="160dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center" 
        />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/rfidline2"
    	android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
        >
    	<TextView
        android:id="@+id/Text_GCMC_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/MIFARE_GCMC"    
        />
        
        <EditText 
        android:id="@+id/Edit_GCMC_LEN"
        android:layout_width="440dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="60"
    	android:inputType="text"
        />
     </LinearLayout>
     
    <LinearLayout 
        android:id="@+id/rfidline3"
    	android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
        >
    	<TextView
        android:id="@+id/Text_WTDW_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/MIFARE_WTDW"    
        />
        
        <EditText 
        android:id="@+id/Edit_WTDW_LEN"
        android:layout_width="440dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="50"
    	android:inputType="text"
        />
     </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/rfidline4"
    	android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
        >
    	<TextView
        android:id="@+id/Text_SGDW_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/MIFARE_SGDW"    
        />
        
        <EditText 
        android:id="@+id/Edit_SGDW_LEN"
        android:layout_width="440dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="50"
    	android:inputType="text"
        />
     </LinearLayout>
     
    <LinearLayout 
        android:id="@+id/rfidline5"
    	android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
        >
    	<TextView
        android:id="@+id/Text_JZDW_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/MIFARE_JZDW"    
        />
        
        <EditText 
        android:id="@+id/Edit_JZDW_LEN"
        android:layout_width="440dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="50"
    	android:inputType="text"
        />
     </LinearLayout>
     
     <LinearLayout 
        android:id="@+id/rfidline6"
    	android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
        >
    	<TextView
        android:id="@+id/Text_JZR_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/MIFARE_JZR"    
        />
        
        <EditText 
        android:id="@+id/Edit_JZR_LEN"
        android:layout_width="220dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="12"
    	android:inputType="text"
        />
        
        <TextView
        android:id="@+id/Text_JZBH_LEN"
        android:layout_width="120dp"
    	android:layout_height="fill_parent" 
    	android:textSize="20dp"
    	android:gravity="center"
    	android:text="@string/MIFARE_JZBH"    
        />
        
        <EditText 
        android:id="@+id/Edit_JZBH_LEN"
        android:layout_width="220dp"
    	android:layout_height="fill_parent"
    	android:textSize="20dp"
    	android:maxLength="30"
        />
     </LinearLayout>
    
    </LinearLayout>  
    <Button
        android:id="@+id/RFID_Save"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="21dp"
        android:layout_marginRight="166dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:text="@string/RFID_Save" />
</RelativeLayout>
